--- a/css/_global.scss
+++ b/css/_global.scss
@@ -18,7 +18,25 @@ body {
     background-color: black;
 }
 .body-whitesmoke {
+    position: relative;
     background-color: whitesmoke;
+    width: 100%;
+    height: 72vh;
+    margin-top: 8vh;
+    background-image: url('../images/Grill.png'); 
+    background-repeat: repeat; 
+    background-size: 100px 100px;
+    background-blend-mode: soft-light;
+}
+.body-whitesmoke::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 72vh;
+    background: linear-gradient(90deg, transparent 500px, rgba(0, 0, 0, 0) 500px);
+    pointer-events: none; 
 }
 .relative {
     position: relative;
