--- a/css/styles.scss
+++ b/css/styles.scss
@@ -126,7 +126,7 @@
                 display: none;
             }
             .orange-font {
-                padding: 2rem 0 1rem 0;
+                padding: 2rem 1rem 1rem 1rem;
                 font-size: 1rem;
                 line-height: 1.65rem;
                 letter-spacing: 0.25px;
@@ -139,7 +139,7 @@
             }
             .gray-font {
                 font-weight: 200;
-                padding: .95rem 0;
+                padding: .95rem 1.25rem;
                 line-height: 1.5rem;
             }
         }
